# BiCG_with_BLAS

./: .gitignore  .gitmodules  BBCGSTAB_analisys.ipynb  CMakeLists.txt  LICENSE  README.md  metrics.ipynb  seed_test.ipynb  stability.ipynb
CXXBLAS/include/: CXXBLAS_config.h
CXXBLAS/include/CXXBLAS/: Level1.hpp
CXXBLAS/include/CXXBLAS/Level1/: axpby.hpp  dot.hpp
CXXBLAS/include/CXXBLAS/Level2/: gemv.hpp
CXXBLAS/share/CXXBLAS/cmake/: CXXBLASConfig.cmake  CXXBLASConfigVersion.cmake  CXXBLASTargets.cmake
include/: BBCG.hpp  BBCGSR.hpp  BBCGStab.hpp  BCG.hpp  BCGStab.hpp  BlasLapackInterface.hpp  MyMat.hpp  auxiliary_functions.hpp  complex_map_type.hpp  extended.hpp  fbinio.hpp  seed_bbcgsr.hpp  stability_check.hpp  trans_free_test.hpp
src/: main.cpp
